[package]
name = "chafa-viewer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chafa-viewer"
path = "src/main.rs"

[dependencies]
crossterm = "0.28"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "tiff"] }
anyhow = "1.0"
rayon = "1"
tempfile = "3"
